vpc.tf
# VPC Creation using CIDR block available in vars.tf
data "aws_availability_zones" "available"{}
resource "aws_vpc" "vpc"{
    cidr_block = var.vpc_cidr
    enable_dns_hostnames=true
    enable_dns_support = true
    tags = {
        Name = "vpc"
    }
}
